--- a/MarkdownGenerator/MardownGenerator.Installer/Product.wxs
+++ b/MarkdownGenerator/MardownGenerator.Installer/Product.wxs
@@ -1,30 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
-  <Product Id="*" Name="MardownGenerator.Installer" Language="1033" Version="1.0.0.0" Manufacturer="RDE" UpgradeCode="90e6fccb-9d70-436f-85cf-8e05fcd46765">
+  <Product Id="*" Name="MardownGenerator" Language="1033" Version="1.0.0.0" Manufacturer="RDE" UpgradeCode="90e6fccb-9d70-436f-85cf-8e05fcd46765">
     <Package InstallerVersion="200" Compressed="yes" InstallScope="perMachine" />
 
     <MajorUpgrade DowngradeErrorMessage="A newer version of [ProductName] is already installed." />
     <MediaTemplate />
 
     <Feature Id="ProductFeature" Title="MardownGenerator.Installer" Level="1">
-      <ComponentGroupRef Id="ProductComponents" />
+      <ComponentGroupRef Id="Components" />
+      <ComponentGroupRef Id ="RegistryKeysGroup" />
     </Feature>
   </Product>
 
   <Fragment>
     <Directory Id="TARGETDIR" Name="SourceDir">
       <Directory Id="ProgramFilesFolder">
-        <Directory Id="INSTALLFOLDER" Name="MarkdownGenerator.Installer" />
+        <Directory Id="INSTALLFOLDER" Name="MarkdownGenerator" />
       </Directory>
     </Directory>
-  </Fragment>
-
-  <Fragment>
-    <ComponentGroup Id="ProductComponents" Directory="INSTALLFOLDER">
-      <!-- TODO: Remove the comments around this Component element and the ComponentRef below in order to add resources to this installer. -->
-      <!-- <Component Id="ProductComponent"> -->
-      <!-- TODO: Insert files, registry keys, and other resources here. -->
-      <!-- </Component> -->
-    </ComponentGroup>
   </Fragment>
 </Wix>
